Fix moving hotspots when expand/collapse tree in Simple template (#83)

--- a/css/styles.less
+++ b/css/styles.less
@@ -599,6 +599,7 @@ body {
 
         &.hotspot-on-image-container {
             text-align: center;
+			line-height: 0;
         }
 
         &.styled-content {
